tests/paczka1/fuzzy1/54619466.err
Error in line 6: ojPV0 A466 17,9
Error in line 10: pwi15 A466 44,7
Error in line 17: S59 A466 -1,1
Error in line 13: vx1CaimH A466 44,5
Error in line 22: S59 A466 76,9
Error in line 26: pwi15 A233 88,2
Error in line 25: CMzx A233 93,4
